home layout and routing

--- a/index.html
+++ b/index.html
@@ -5,11 +5,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+
+    <title>Career XP</title>
 </head>
 
 <body>
-    test
+    <div id="home-grid">
+        <div id="section1">
+            <a href="futureofwork.html">
+                <div id="future-of-work-box">
+                    <h3>The future of work</h3>
+                    <h3>A career-ready webinar series</h3>
+                </div>
+            </a>
+            <a href="about.html">
+                <div id="date-box">
+                    <h3>13-16 Aug</h3>
+                </div>
+            </a>
+        </div>
+        <div id="section2">
+            <a href="speakers.html">
+                <div id="speakers-box">
+                    <h3>Speakers</h3>
+                </div>
+            </a>
+            <a href="program.html">
+                <div id="program-box">
+                    <h3>Program</h3>
+                </div>
+            </a>
+        </div>
+    </div>
+    <div id="footer"></div>
 
 </body>
 
