--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="futureofwork.html">
                 <div id="future-of-work-box">
                     <h3>The future of work</h3>
-                    <h3>A career-ready webinar series</h3>
+                    <h3>A Career-ready Webinar Series</h3>
                 </div>
             </a>
             <a href="about.html">
@@ -38,7 +38,25 @@
             </a>
         </div>
     </div>
-    <div id="footer"></div>
+    <div id="footer">
+        <div class="footer-content">
+            <a href="http://google.com">
+                <li>Instagram</li>
+            </a>
+            <a href="http://google.com">
+                <li>Twitter</li>
+            </a>
+            <a href="http://google.com">
+                <li>CareerXP.com</li>
+            </a>
+            <li>
+                <img src="static/CareerXP-logo.png">
+            </li>
+            <li>
+                <img src="static/kreate-logo.png">
+            </li>
+        </div>
+    </div>
 
 </body>
 
